# censusreporter

./: .dockerignore  .gitignore  CHECKS  Dockerfile  Gruntfile.js  LICENSE  README.md  Vagrantfile  cache_clearer.py  census_app_db  fabfile.py  manage.py  newrelic.ini  nginx.conf.sigil  nginx.conf.template  package-lock.json  package.json  pyproject.toml  requirements.txt  vagrant_install.sh
branding/: Wazi logo vector.ai
census/: admin.py  context_processors.py  custom_profile.py  models.py  profile.py  tests.py  topics.py  urls.py  utils.py  views.py
census/migrations/: 0001_initial.py  0002_auto_20200218_0551.py
census/static/: tilelayer.html
census/templates/: _base.html  _homepage_base.html  _new_homepage_base.html  glossary.html  homepage.html  new_homepage.html
census/templatetags/: comparatives.py  madlibs.py  partition.py  results.py  sumlevs.py  tabletags.py
censusreporter/: wsgi.py
censusreporter/api/: README.md  __init__.py  config.py  controller.py  download.py  fabfile.py  models.py  requirements.txt  utils.py
conf/: newrelic.ini  nginx.template  pythonpath.template  upstart.template
config/base/: dummy_settings.py  settings.py  urls.py
config/dev/: settings.py  urls.py  wsgi.py
config/prod/: settings.py  urls.py  wsgi.py
js-src/: aggregate.jsm
js-src/reproject/: index.js
resources/: apps.py  models.py
resources/migrations/: 0001_initial.py  0002_iabindexpage.py  0003_iabdemolitionsindexpage.py  0004_auto_20200218_1557.py  0005_informationforactiontagindexpage.py  (+14 more)
server/: nginx.site.template  upstart.conf.template
(+456 files in other folders)
